--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-bootstrap-simple-sidebar",
+  "name": "a-bot",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://LucianoChichari.github.io/LandingSideProjectOne",
+  "homepage": "https://a-bot.online/",
   "dependencies": {
+    "@fontsource/poppins": "^4.5.10",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
@@ -19,7 +20,7 @@
     "react-dom": "^16.8.6",
     "react-materialize": "^3.10.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
     "react-scroll-to-component": "^1.0.2",
     "react-tiny-fab": "^4.0.4",
@@ -30,8 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,6 +50,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "autoprefixer": "^10.4.13",
+    "gh-pages": "^3.2.3",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
