--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4.1.17",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
+    "react-auto-typing": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-materialize": "^3.10.0",
